slightly better progress bar, need to fix the futures integration

--- a/projects.yaml
+++ b/projects.yaml
@@ -1,11 +1,11 @@
-# 
+#
 # Format of this file:
-# 
+#
 #  - First we have the "tagsonomy", a tree of tags used to categorize the projects.
 #  - After that is "projects", a list of awesome projects
-# 
+#
 # Each project has the following format:
-# 
+#
 #  - name: Project Name
 #    repo_url: github or bitbucket or other web link to code
 #    wp_url: Wikipedia URL if there is one
@@ -13,13 +13,13 @@
 #    home_url: Home page if not one of the above
 #    tags: ["", ""]  # see full taxonomy elsewhere in this file
 #    desc: Handy project designed for handiness
-# 
+#
 # Only the name, repo_url, tags, and description are required.
-# 
+#
 # In the description, avoid references to Python, free/open-source, and
 # the app name itself, since those are already present/implied by being
-# on the list.  
-# 
+# on the list.
+#
 tagsonomy:
   # NOTE: order here controls order of the rendered text
   topic:
@@ -112,9 +112,9 @@ tagsonomy:
     - proprietary
 
 projects:
-# 
+#
 # Internet
-# 
+#
   - name: ArchiveBox
     repo_url: https://github.com/pirate/ArchiveBox
     home_url: https://archivebox.io/
@@ -292,9 +292,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Audio
-# 
+#
   - name: Beets
     repo_url: https://github.com/beetbox/beets
     pypi_url: https://pypi.org/project/beets/
@@ -401,9 +401,9 @@ projects:
       - audio
       - linux
       - gtk
-# 
+#
 # Video
-# 
+#
   - name: Flowblade
     repo_url: https://github.com/jliljebl/flowblade
     wp_url: https://en.wikipedia.org/wiki/Flowblade
@@ -452,9 +452,9 @@ projects:
       - server
     desc: Static media index custom-built for the Python community, and all the content our meetings and conferences produce.
 
-# 
+#
 # Graphics
-# 
+#
   - name: cartoonify / Draw This.
     repo_url: https://github.com/danmacnish/cartoonify
     home_url: https://www.kapwing.com/cartoonify
@@ -573,9 +573,9 @@ projects:
       - graphics
       - dev
       - server
-# 
+#
 # Games
-# 
+#
   - name: Frets on Fire X
     repo_url: https://github.com/fofix/fofix
     # see_also: https://github.com/fretsonfire/fof-python
@@ -634,9 +634,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Productivity
-# 
+#
   - name: Autokey
     repo_url: https://github.com/autokey/autokey
     pypi_url: https://pypi.org/project/autokey/
@@ -763,9 +763,9 @@ projects:
       - productivity
       - server
       - flask
-# 
+#
 # Organization
-# 
+#
   - name: Calibre
     repo_url: https://github.com/kovidgoyal/calibre/
     home_url: https://calibre-ebook.com/
@@ -891,9 +891,9 @@ projects:
       - linux
       - windows
       - gtk
-# 
+#
 # Communication
-# 
+#
   - name: Abilian SBE
     repo_url: https://github.com/abilian/abilian-sbe
     home_url: https://www.abilian.com/
@@ -1104,9 +1104,9 @@ projects:
     tags:
       - communication
       - server
-# 
+#
 # Education
-# 
+#
   - name: Anki
     repo_url: https://github.com/dae/anki
     home_url: https://apps.ankiweb.net/
@@ -1142,9 +1142,9 @@ projects:
     tags:
       - education
       - server
-# 
+#
 # Science
-# 
+#
   - name: AnuGA
     repo_url: https://github.com/GeoscienceAustralia/anuga_core
     home_url: https://anuga.anu.edu.au/
@@ -1261,6 +1261,7 @@ projects:
     wp_url: https://en.wikipedia.org/wiki/SageMath
     home_url: http://www.sagemath.org/
     repo_url: https://git.sagemath.org/sage.git
+    clone_url: git+git://git.sagemath.org/sage.git
     desc: Cross-platform computer algebra system with features covering many aspects of mathematics, including algebra, combinatorics, graph theory, numerical analysis, number theory, calculus, and statistics.
     tags:
       - science
@@ -1269,6 +1270,7 @@ projects:
       - mac
   - name: SOFA Statistics
     repo_url: https://code.launchpad.net/sofastatistics
+    clone_url: git+https://git.launchpad.net/sofastatistics
     home_url: http://www.sofastatistics.com/
     desc: User-friendly statistics and analysis with a learn-as-you-go approach.
     tags:
@@ -1287,9 +1289,9 @@ projects:
       - windows
       - mac
       - qt
-# 
+#
 # Cms
-# 
+#
   - name: Django-CMS
     repo_url: https://github.com/divio/django-cms
     home_url: https://www.django-cms.org/en/
@@ -1347,9 +1349,9 @@ projects:
       - cms
       - server
       - django
-# 
+#
 # Erp
-# 
+#
   - name: ERP5
     home_url: https://erp5.nexedi.com/
     repo_url: https://lab.nexedi.com/nexedi/erp5
@@ -1386,9 +1388,9 @@ projects:
       - erp
       - server
       - fdn
-# 
+#
 # Static_Site
-# 
+#
   - name: Cactus
     repo_url: https://github.com/eudicots/Cactus
     pypi_url: https://pypi.org/project/cactus
@@ -1446,9 +1448,9 @@ projects:
       - windows
       - mac
     desc: Command-line static site generator that supports Markdown and reST syntax.
-# 
+#
 # Scm
-# 
+#
   - name: Allura
     repo_url: https://github.com/apache/allura
     wp_url: https://en.wikipedia.org/wiki/Apache_Allura
@@ -1557,9 +1559,9 @@ projects:
     tags:
       - scm
       - server
-# 
+#
 # Code_Review
-# 
+#
   - name: Meld
     repo_url: https://github.com/GNOME/meld
     home_url: http://meldmerge.org/
@@ -1585,9 +1587,9 @@ projects:
     tags:
       - code_review
       - server
-# 
+#
 # Ops
-# 
+#
   - name: Ansible
     repo_url: https://github.com/ansible/ansible
     docs_url: https://docs.ansible.com/ansible/
@@ -1770,9 +1772,9 @@ projects:
     tags:
       - ops
       - linux
-# 
+#
 # Security
-# 
+#
   - name: Cowrie
     repo_url: https://github.com/cowrie/cowrie
     home_url: http://www.cowrie.org/
@@ -1864,9 +1866,9 @@ projects:
     desc: '[Cross Site Scripting](https://en.wikipedia.org/wiki/Cross-site_scripting) (XSS) detection suite equipped with multiple hand-written parsers, a payload generator, a fuzzing engine, and a performance-focused crawler.'
     tags:
       - security
-# 
+#
 # Docs
-# 
+#
   - name: asciidoc
     repo_url: https://github.com/asciidoc/asciidoc
     desc: Text document format for writing notes, documentation, articles, books, slideshows, man pages & blogs.
@@ -1902,9 +1904,9 @@ projects:
     desc: Documentation tool for interconnected bodies of authorship, from code documentation to books. Used by [the official Python docs](https://docs.python.org), and many other projects ([not all of them Python](https://varnish-cache.org/docs/)).
     tags:
       - docs
-# 
+#
 # Editor
-# 
+#
   - name: Black
     repo_url: https://github.com/ambv/black
     docs_url: https://black.readthedocs.io/
@@ -2012,9 +2014,9 @@ projects:
       - windows
       - mac
       - tk
-# 
+#
 # Pkg_Mgr
-# 
+#
   - name: Conda
     home_url: https://conda.io/
     repo_url: https://github.com/conda/conda
@@ -2088,9 +2090,9 @@ projects:
       - pkg_mgr
       - linux
       - corp
-# 
+#
 # Pkg_Repo
-# 
+#
   - name: Bandersnatch
     repo_url: https://github.com/pypa/bandersnatch
     desc: PyPI mirror client complying with [PEP 381](http://www.python.org/dev/peps/pep-0381/).
@@ -2114,9 +2116,9 @@ projects:
       - pkg_repo
       - server
       - fnd
-# 
+#
 # Build
-# 
+#
   - name: bitbake
     wp_url: https://en.wikipedia.org/wiki/BitBake
     repo_url: https://github.com/openembedded/bitbake
@@ -2201,9 +2203,9 @@ projects:
     tags:
       - build
       - linux
-# 
+#
 # Shell
-# 
+#
   - name: Ergonomica
     repo_url: https://github.com/ergonomica/ergonomica
     docs_url: http://ergonomica.readthedocs.io/
@@ -2229,9 +2231,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Dev
-# 
+#
   - name: asciinema
     repo_url: https://github.com/asciinema/asciinema
     home_url: https://asciinema.org/
@@ -2352,9 +2354,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Misc
-# 
+#
   - name: Guake
     repo_url: https://github.com/Guake/guake
     home_url: http://guake-project.org/
