--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
--e git+git@github.com:mahmoud/awesome-python-applications.git@5178156e186dc1a55c9f6c1dae8e55e1b2b612cf#egg=apatite&subdirectory=apatite
-attrs==18.2.0
+attrs==19.1.0
 boltons==19.1.0
-face==19.1.2
-glom==19.1.0
-hyperlink==18.0.0
+contextlib2==0.5.5
+-e git+git@github.com:mahmoud/face.git@a7809f99affbfe8aeb6f7bc1208aed6a52495e37#egg=face
+glom==19.2.0
+hyperlink==19.0.0
 idna==2.8
-ruamel.yaml==0.15.80
-schema==0.6.8
-tqdm==4.32.2
+ruamel.yaml==0.16.1
+ruamel.yaml.clib==0.1.2
+schema==0.7.0
+tqdm==4.33.0
