--- a/projects.yaml
+++ b/projects.yaml
@@ -1,11 +1,11 @@
-# 
+#
 # Format of this file:
-# 
+#
 #  - First we have the "tagsonomy", a tree of tags used to categorize the projects.
 #  - After that is "projects", a list of awesome projects
-# 
+#
 # Each project has the following format:
-# 
+#
 #  - name: Project Name
 #    repo_url: github or bitbucket or other web link to code
 #    wp_url: Wikipedia URL if there is one
@@ -13,13 +13,13 @@
 #    home_url: Home page if not one of the above
 #    tags: ["", ""]  # see full taxonomy elsewhere in this file
 #    desc: Handy project designed for handiness
-# 
+#
 # Only the name, repo_url, tags, and description are required.
-# 
+#
 # In the description, avoid references to Python, free/open-source, and
 # the app name itself, since those are already present/implied by being
-# on the list.  
-# 
+# on the list.
+#
 tagsonomy:
   # NOTE: order here controls order of the rendered text
   topic:
@@ -66,6 +66,7 @@ tagsonomy:
         - wx
         - pygame
         - other
+        - tui
     - network:
         - flask
         - django
@@ -87,9 +88,10 @@ tagsonomy:
           - linux
           - windows
           - mac
-    - console
-    - tui
-    - mobile
+          - console
+    - mobile:
+        subtags:
+          - android
     - browser
     - server:
         subtags:    # sep tag for container, maybe separate top-level group for packaging in general?
@@ -113,9 +115,9 @@ tagsonomy:
     - proprietary
 
 projects:
-# 
+#
 # Internet
-# 
+#
   - name: ArchiveBox
     repo_url: https://github.com/pirate/ArchiveBox
     home_url: https://archivebox.io/
@@ -293,9 +295,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Audio
-# 
+#
   - name: Beets
     repo_url: https://github.com/beetbox/beets
     pypi_url: https://pypi.org/project/beets/
@@ -402,9 +404,9 @@ projects:
       - audio
       - linux
       - gtk
-# 
+#
 # Video
-# 
+#
   - name: Flowblade
     repo_url: https://github.com/jliljebl/flowblade
     wp_url: https://en.wikipedia.org/wiki/Flowblade
@@ -456,9 +458,9 @@ projects:
 #
 # Graphics
 #
-# 
+#
 # Graphics
-# 
+#
   - name: cartoonify / Draw This.
     repo_url: https://github.com/danmacnish/cartoonify
     home_url: https://www.kapwing.com/cartoonify
@@ -466,6 +468,7 @@ projects:
     tags:
       - graphics
       - docker
+      - console
       - hardware
   - name: FreeCAD
     repo_url: https://github.com/FreeCAD/FreeCAD
@@ -577,9 +580,9 @@ projects:
       - graphics
       - dev
       - server
-# 
+#
 # Games
-# 
+#
   - name: Frets on Fire X
     repo_url: https://github.com/fofix/fofix
     # see_also: https://github.com/fretsonfire/fof-python
@@ -638,9 +641,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Productivity
-# 
+#
   - name: Autokey
     repo_url: https://github.com/autokey/autokey
     pypi_url: https://pypi.org/project/autokey/
@@ -767,9 +770,9 @@ projects:
       - productivity
       - server
       - flask
-# 
+#
 # Organization
-# 
+#
   - name: Calibre
     repo_url: https://github.com/kovidgoyal/calibre/
     home_url: https://calibre-ebook.com/
@@ -895,9 +898,9 @@ projects:
       - linux
       - windows
       - gtk
-# 
+#
 # Communication
-# 
+#
   - name: Abilian SBE
     repo_url: https://github.com/abilian/abilian-sbe
     home_url: https://www.abilian.com/
@@ -1108,9 +1111,9 @@ projects:
     tags:
       - communication
       - server
-# 
+#
 # Education
-# 
+#
   - name: Anki
     repo_url: https://github.com/dae/anki
     home_url: https://apps.ankiweb.net/
@@ -1146,9 +1149,9 @@ projects:
     tags:
       - education
       - server
-# 
+#
 # Science
-# 
+#
   - name: AnuGA
     repo_url: https://github.com/GeoscienceAustralia/anuga_core
     home_url: https://anuga.anu.edu.au/
@@ -1293,9 +1296,9 @@ projects:
       - windows
       - mac
       - qt
-# 
+#
 # Cms
-# 
+#
   - name: Django-CMS
     repo_url: https://github.com/divio/django-cms
     home_url: https://www.django-cms.org/en/
@@ -1353,9 +1356,9 @@ projects:
       - cms
       - server
       - django
-# 
+#
 # Erp
-# 
+#
   - name: ERP5
     home_url: https://erp5.nexedi.com/
     repo_url: https://lab.nexedi.com/nexedi/erp5
@@ -1392,9 +1395,9 @@ projects:
       - erp
       - server
       - fdn
-# 
+#
 # Static_Site
-# 
+#
   - name: Cactus
     repo_url: https://github.com/eudicots/Cactus
     pypi_url: https://pypi.org/project/cactus
@@ -1455,9 +1458,9 @@ projects:
 #
 # Scm
 #
-# 
+#
 # Scm
-# 
+#
   - name: Allura
     repo_url: https://github.com/apache/allura
     wp_url: https://en.wikipedia.org/wiki/Apache_Allura
@@ -1566,9 +1569,9 @@ projects:
     tags:
       - scm
       - server
-# 
+#
 # Code_Review
-# 
+#
   - name: Meld
     repo_url: https://github.com/GNOME/meld
     home_url: http://meldmerge.org/
@@ -1594,9 +1597,9 @@ projects:
     tags:
       - code_review
       - server
-# 
+#
 # Ops
-# 
+#
   - name: Ansible
     repo_url: https://github.com/ansible/ansible
     docs_url: https://docs.ansible.com/ansible/
@@ -1779,9 +1782,9 @@ projects:
     tags:
       - ops
       - linux
-# 
+#
 # Security
-# 
+#
   - name: Cowrie
     repo_url: https://github.com/cowrie/cowrie
     home_url: http://www.cowrie.org/
@@ -1879,9 +1882,9 @@ projects:
     tags:
       - security
       - console
-# 
+#
 # Docs
-# 
+#
   - name: asciidoc
     repo_url: https://github.com/asciidoc/asciidoc
     desc: Text document format for writing notes, documentation, articles, books, slideshows, man pages & blogs.
@@ -1920,9 +1923,9 @@ projects:
     tags:
       - docs
       - console
-# 
+#
 # Editor
-# 
+#
   - name: Black
     repo_url: https://github.com/ambv/black
     docs_url: https://black.readthedocs.io/
@@ -2030,9 +2033,9 @@ projects:
       - windows
       - mac
       - tk
-# 
+#
 # Pkg_Mgr
-# 
+#
   - name: Conda
     home_url: https://conda.io/
     repo_url: https://github.com/conda/conda
@@ -2106,9 +2109,9 @@ projects:
       - pkg_mgr
       - linux
       - corp
-# 
+#
 # Pkg_Repo
-# 
+#
   - name: Bandersnatch
     repo_url: https://github.com/pypa/bandersnatch
     desc: PyPI mirror client complying with [PEP 381](http://www.python.org/dev/peps/pep-0381/).
@@ -2132,9 +2135,9 @@ projects:
       - pkg_repo
       - server
       - fnd
-# 
+#
 # Build
-# 
+#
   - name: bitbake
     wp_url: https://en.wikipedia.org/wiki/BitBake
     repo_url: https://github.com/openembedded/bitbake
@@ -2219,9 +2222,9 @@ projects:
     tags:
       - build
       - linux
-# 
+#
 # Shell
-# 
+#
   - name: Ergonomica
     repo_url: https://github.com/ergonomica/ergonomica
     docs_url: http://ergonomica.readthedocs.io/
@@ -2247,9 +2250,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Dev
-# 
+#
   - name: asciinema
     repo_url: https://github.com/asciinema/asciinema
     home_url: https://asciinema.org/
@@ -2373,9 +2376,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Misc
-# 
+#
   - name: Guake
     repo_url: https://github.com/Guake/guake
     home_url: http://guake-project.org/
